--- a/src/index.scss
+++ b/src/index.scss
@@ -9,4 +9,98 @@ html {
 body {
   margin: 0;
   min-height: 100%;
+  background-color: #fafbfc;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  position: sticky;
+  top: 0;
+  background-color: rgba(255, 255, 255, 0.75);
+  background-clip: padding-box;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0.5rem 1.25rem rgba(0, 0, 0, 0.05);
+}
+header img {
+  width: 3rem;
+}
+
+header ul {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  align-items: center;
+}
+header li {
+  margin-right: 1rem;
+}
+
+header a:link,
+header a:visited {
+  text-decoration: none;
+  color: black;
+  font-size: 0.8rem;
+}
+
+main {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 1rem;
+  padding: 1rem;
+  margin: auto;
+  max-width: 960px;
+}
+article figure {
+  margin: 0;
+}
+article figure img {
+  border: 1px solid lightgray;
+  border-radius: 2%;
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+article ul {
+  margin: 0.5rem 0 0;
+  padding: 0;
+  display: flex;
+  list-style: none;
+  justify-content: space-between;
+  align-items: center;
+}
+
+article ul img {
+  border-radius: 50%;
+}
+
+article a:link,
+article a:visited {
+  text-decoration: none;
+  color: black;
+}
+
+footer {
+  border-top: 1px solid lightgrey;
+  margin: 2rem;
+}
+@media (min-width: 600px) {
+  main {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (min-width: 960px) {
+  main {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media (min-width: 1360px) {
+  main {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
 }
